# gpu-lock

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  PUBLISHING.md  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml
client/: README.md  pyproject.toml
client/gpu_lock_client/: __init__.py  _cli.py  _client.py  _types.py
server/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
server/gpu_lock_server/: __init__.py  __main__.py  app.py  auth.py  config.py  logging_config.py  manager.py  models.py  persistence.py
tests/: conftest.py  test_auth.py  test_basic.py  test_contention.py  test_heartbeat.py  test_multi_gpu.py  test_persistence.py  test_priority.py
